5-ingress/http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ing
  namespace: wordpress
  annotations: {}
spec:
  ingressClassName: nginx
  rules:
  - host: wordpress.busyqa.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress-service
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voteapp-ing
  namespace: voteapp
  annotations: {}
spec:
  ingressClassName: nginx
  rules:
  - host: vote.busyqa.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote
            port:
              number: 80
  - host: result.busyqa.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: result
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-ing
  namespace: home
  annotations: {}
spec:
  ingressClassName: nginx
  rules:
  - host: busyqa.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-svc
            port:
              number: 80
  - host: www.busyqa.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-svc
            port:
              number: 80
